# Raylib-Racing

./: .gitmodules  CMakeLists.txt  Makefile  RacingGame.make  build.sh  premake5.lua
assets/chevy/: 23-chevrolet-camaro.rar  ChevroletCamaro.mtl  ChevroletCamero.glb  chevroletCamero.blend  chevroletCamero.mtl
assets/track/: Taas+circuit.glb  Taas+circuit.mtl  uploads_files_4992551_Taas+circuit.mtl
bin-int/Debug-linux-x86_64/RacingGame/: car.d  carMove.d  main.d
core/include/: CockpitCamera.hpp  Component.hpp  Coregame.hpp  entity.hpp  game.hpp
core/src/: inputSys.cpp
racing/include/: CockpitCamera.hpp  car.hpp  carMove.hpp  game.hpp
racing/src/: car.cpp  carMove.cpp
src/: main.cpp
