cmake_minimum_required(VERSION 4.0)
project(RacingGame)

set(CMAKE_CXX_STANDARD 14)

include_directories(core/include)
include_directories(racing/include)
include_directories(vendor/raylib/examples/core)
include_directories(vendor/raylib/examples/models)
include_directories(vendor/raylib/examples/others)
include_directories(vendor/raylib/examples/others/external)
include_directories(vendor/raylib/examples/others/external/include)
include_directories(vendor/raylib/examples/others/external/include/GLFW)
include_directories(vendor/raylib/examples/others/resources)
include_directories(vendor/raylib/examples/shaders)
include_directories(vendor/raylib/examples/shapes)
include_directories(vendor/raylib/projects/Notepad++/raylib_npp_parser)
include_directories(vendor/raylib/projects/VS2019-Android/raylib_android/raylib_android.NativeActivity)
include_directories(vendor/raylib/src)
include_directories(vendor/raylib/src/external)
include_directories(vendor/raylib/src/external/glfw/deps)
include_directories(vendor/raylib/src/external/glfw/deps/glad)
include_directories(vendor/raylib/src/external/glfw/deps/mingw)
include_directories(vendor/raylib/src/external/glfw/include)
include_directories(vendor/raylib/src/external/glfw/include/GLFW)
include_directories(vendor/raylib/src/external/glfw/src)
include_directories(vendor/raylib-cpp/examples/multiple)
include_directories(vendor/raylib-cpp/examples/shaders)
include_directories(vendor/raylib-cpp/include)
include_directories(vendor/raylib-cpp/tests)

add_executable(RacingGame
        core/include/Component.hpp
        core/include/entity.hpp
        core/src/inputSys.cpp
        racing/include/car.hpp
        racing/include/carMove.hpp
        racing/include/CockpitCamera.hpp
        racing/src/car.cpp
        racing/src/carMove.cpp
        racing/src/main.cpp
        src/main.cpp
        vendor/raylib/examples/audio/audio_mixed_processor.c
        vendor/raylib/examples/audio/audio_module_playing.c
        vendor/raylib/examples/audio/audio_music_stream.c
        vendor/raylib/examples/audio/audio_raw_stream.c
        vendor/raylib/examples/audio/audio_sound_loading.c
        vendor/raylib/examples/audio/audio_sound_multi.c
        vendor/raylib/examples/audio/audio_sound_positioning.c
        vendor/raylib/examples/audio/audio_stream_effects.c
        vendor/raylib/examples/core/core_2d_camera.c
        vendor/raylib/examples/core/core_2d_camera_mouse_zoom.c
        vendor/raylib/examples/core/core_2d_camera_platformer.c
        vendor/raylib/examples/core/core_2d_camera_split_screen.c
        vendor/raylib/examples/core/core_3d_camera_first_person.c
        vendor/raylib/examples/core/core_3d_camera_fps.c
        vendor/raylib/examples/core/core_3d_camera_free.c
        vendor/raylib/examples/core/core_3d_camera_mode.c
        vendor/raylib/examples/core/core_3d_camera_split_screen.c
        vendor/raylib/examples/core/core_3d_picking.c
        vendor/raylib/examples/core/core_automation_events.c
        vendor/raylib/examples/core/core_basic_screen_manager.c
        vendor/raylib/examples/core/core_basic_window.c
        vendor/raylib/examples/core/core_clipboard_text.c
        vendor/raylib/examples/core/core_custom_frame_control.c
        vendor/raylib/examples/core/core_custom_logging.c
        vendor/raylib/examples/core/core_delta_time.c
        vendor/raylib/examples/core/core_directory_files.c
        vendor/raylib/examples/core/core_drop_files.c
        vendor/raylib/examples/core/core_high_dpi.c
        vendor/raylib/examples/core/core_highdpi_testbed.c
        vendor/raylib/examples/core/core_input_actions.c
        vendor/raylib/examples/core/core_input_gamepad.c
        vendor/raylib/examples/core/core_input_gestures.c
        vendor/raylib/examples/core/core_input_gestures_testbed.c
        vendor/raylib/examples/core/core_input_keys.c
        vendor/raylib/examples/core/core_input_mouse.c
        vendor/raylib/examples/core/core_input_mouse_wheel.c
        vendor/raylib/examples/core/core_input_multitouch.c
        vendor/raylib/examples/core/core_input_virtual_controls.c
        vendor/raylib/examples/core/core_monitor_detector.c
        vendor/raylib/examples/core/core_random_sequence.c
        vendor/raylib/examples/core/core_random_values.c
        vendor/raylib/examples/core/core_render_texture.c
        vendor/raylib/examples/core/core_scissor_test.c
        vendor/raylib/examples/core/core_screen_recording.c
        vendor/raylib/examples/core/core_smooth_pixelperfect.c
        vendor/raylib/examples/core/core_storage_values.c
        vendor/raylib/examples/core/core_text_file_loading.c
        vendor/raylib/examples/core/core_undo_redo.c
        vendor/raylib/examples/core/core_vr_simulator.c
        vendor/raylib/examples/core/core_window_flags.c
        vendor/raylib/examples/core/core_window_letterbox.c
        vendor/raylib/examples/core/core_window_should_close.c
        vendor/raylib/examples/core/core_world_screen.c
        vendor/raylib/examples/core/raygui.h
        vendor/raylib/examples/models/models_animation_gpu_skinning.c
        vendor/raylib/examples/models/models_animation_playing.c
        vendor/raylib/examples/models/models_basic_voxel.c
        vendor/raylib/examples/models/models_billboard_rendering.c
        vendor/raylib/examples/models/models_bone_socket.c
        vendor/raylib/examples/models/models_box_collisions.c
        vendor/raylib/examples/models/models_cubicmap_rendering.c
        vendor/raylib/examples/models/models_first_person_maze.c
        vendor/raylib/examples/models/models_geometric_shapes.c
        vendor/raylib/examples/models/models_heightmap_rendering.c
        vendor/raylib/examples/models/models_loading.c
        vendor/raylib/examples/models/models_loading_gltf.c
        vendor/raylib/examples/models/models_loading_m3d.c
        vendor/raylib/examples/models/models_loading_vox.c
        vendor/raylib/examples/models/models_mesh_generation.c
        vendor/raylib/examples/models/models_mesh_picking.c
        vendor/raylib/examples/models/models_orthographic_projection.c
        vendor/raylib/examples/models/models_point_rendering.c
        vendor/raylib/examples/models/models_rlgl_solar_system.c
        vendor/raylib/examples/models/models_rotating_cube.c
        vendor/raylib/examples/models/models_skybox_rendering.c
        vendor/raylib/examples/models/models_tesseract_view.c
        vendor/raylib/examples/models/models_textured_cube.c
        vendor/raylib/examples/models/models_waving_cubes.c
        vendor/raylib/examples/models/models_yaw_pitch_roll.c
        vendor/raylib/examples/models/rlights.h
        vendor/raylib/examples/others/external/include/GLFW/glfw3.h
        vendor/raylib/examples/others/external/include/GLFW/glfw3native.h
        vendor/raylib/examples/others/external/include/glad.h
        vendor/raylib/examples/others/external/include/glad_gles2.h
        vendor/raylib/examples/others/resources/audio_data.h
        vendor/raylib/examples/others/resources/image_data.h
        vendor/raylib/examples/others/easings_testbed.c
        vendor/raylib/examples/others/embedded_files_loading.c
        vendor/raylib/examples/others/raylib_opengl_interop.c
        vendor/raylib/examples/others/reasings.h
        vendor/raylib/examples/others/rlgl_compute_shader.c
        vendor/raylib/examples/others/rlgl_standalone.c
        vendor/raylib/examples/others/web_basic_window.c
        vendor/raylib/examples/shaders/rlights.h
        vendor/raylib/examples/shaders/shaders_ascii_rendering.c
        vendor/raylib/examples/shaders/shaders_basic_lighting.c
        vendor/raylib/examples/shaders/shaders_basic_pbr.c
        vendor/raylib/examples/shaders/shaders_custom_uniform.c
        vendor/raylib/examples/shaders/shaders_deferred_rendering.c
        vendor/raylib/examples/shaders/shaders_depth_rendering.c
        vendor/raylib/examples/shaders/shaders_depth_writing.c
        vendor/raylib/examples/shaders/shaders_eratosthenes_sieve.c
        vendor/raylib/examples/shaders/shaders_fog_rendering.c
        vendor/raylib/examples/shaders/shaders_hot_reloading.c
        vendor/raylib/examples/shaders/shaders_hybrid_rendering.c
        vendor/raylib/examples/shaders/shaders_julia_set.c
        vendor/raylib/examples/shaders/shaders_lightmap_rendering.c
        vendor/raylib/examples/shaders/shaders_mandelbrot_set.c
        vendor/raylib/examples/shaders/shaders_mesh_instancing.c
        vendor/raylib/examples/shaders/shaders_model_shader.c
        vendor/raylib/examples/shaders/shaders_multi_sample2d.c
        vendor/raylib/examples/shaders/shaders_normalmap_rendering.c
        vendor/raylib/examples/shaders/shaders_palette_switch.c
        vendor/raylib/examples/shaders/shaders_postprocessing.c
        vendor/raylib/examples/shaders/shaders_raymarching_rendering.c
        vendor/raylib/examples/shaders/shaders_rounded_rectangle.c
        vendor/raylib/examples/shaders/shaders_shadowmap_rendering.c
        vendor/raylib/examples/shaders/shaders_shapes_textures.c
        vendor/raylib/examples/shaders/shaders_simple_mask.c
        vendor/raylib/examples/shaders/shaders_spotlight_rendering.c
        vendor/raylib/examples/shaders/shaders_texture_outline.c
        vendor/raylib/examples/shaders/shaders_texture_rendering.c
        vendor/raylib/examples/shaders/shaders_texture_tiling.c
        vendor/raylib/examples/shaders/shaders_texture_waves.c
        vendor/raylib/examples/shaders/shaders_vertex_displacement.c
        vendor/raylib/examples/shapes/raygui.h
        vendor/raylib/examples/shapes/reasings.h
        vendor/raylib/examples/shapes/shapes_basic_shapes.c
        vendor/raylib/examples/shapes/shapes_bouncing_ball.c
        vendor/raylib/examples/shapes/shapes_bullet_hell.c
        vendor/raylib/examples/shapes/shapes_circle_sector_drawing.c
        vendor/raylib/examples/shapes/shapes_clock_of_clocks.c
        vendor/raylib/examples/shapes/shapes_collision_area.c
        vendor/raylib/examples/shapes/shapes_colors_palette.c
        vendor/raylib/examples/shapes/shapes_dashed_line.c
        vendor/raylib/examples/shapes/shapes_digital_clock.c
        vendor/raylib/examples/shapes/shapes_double_pendulum.c
        vendor/raylib/examples/shapes/shapes_easings_ball.c
        vendor/raylib/examples/shapes/shapes_easings_box.c
        vendor/raylib/examples/shapes/shapes_easings_rectangles.c
        vendor/raylib/examples/shapes/shapes_following_eyes.c
        vendor/raylib/examples/shapes/shapes_kaleidoscope.c
        vendor/raylib/examples/shapes/shapes_lines_bezier.c
        vendor/raylib/examples/shapes/shapes_logo_raylib.c
        vendor/raylib/examples/shapes/shapes_logo_raylib_anim.c
        vendor/raylib/examples/shapes/shapes_mouse_trail.c
        vendor/raylib/examples/shapes/shapes_pie_chart.c
        vendor/raylib/examples/shapes/shapes_rectangle_advanced.c
        vendor/raylib/examples/shapes/shapes_rectangle_scaling.c
        vendor/raylib/examples/shapes/shapes_recursive_tree.c
        vendor/raylib/examples/shapes/shapes_ring_drawing.c
        vendor/raylib/examples/shapes/shapes_rounded_rectangle_drawing.c
        vendor/raylib/examples/shapes/shapes_simple_particles.c
        vendor/raylib/examples/shapes/shapes_splines_drawing.c
        vendor/raylib/examples/shapes/shapes_starfield_effect.c
        vendor/raylib/examples/shapes/shapes_top_down_lights.c
        vendor/raylib/examples/shapes/shapes_triangle_strip.c
        vendor/raylib/examples/shapes/shapes_vector_angle.c
        vendor/raylib/examples/text/text_3d_drawing.c
        vendor/raylib/examples/text/text_codepoints_loading.c
        vendor/raylib/examples/text/text_font_filters.c
        vendor/raylib/examples/text/text_font_loading.c
        vendor/raylib/examples/text/text_font_sdf.c
        vendor/raylib/examples/text/text_font_spritefont.c
        vendor/raylib/examples/text/text_format_text.c
        vendor/raylib/examples/text/text_inline_styling.c
        vendor/raylib/examples/text/text_input_box.c
        vendor/raylib/examples/text/text_rectangle_bounds.c
        vendor/raylib/examples/text/text_sprite_fonts.c
        vendor/raylib/examples/text/text_unicode_emojis.c
        vendor/raylib/examples/text/text_unicode_ranges.c
        vendor/raylib/examples/text/text_words_alignment.c
        vendor/raylib/examples/text/text_writing_anim.c
        vendor/raylib/examples/textures/textures_background_scrolling.c
        vendor/raylib/examples/textures/textures_blend_modes.c
        vendor/raylib/examples/textures/textures_bunnymark.c
        vendor/raylib/examples/textures/textures_fog_of_war.c
        vendor/raylib/examples/textures/textures_gif_player.c
        vendor/raylib/examples/textures/textures_image_channel.c
        vendor/raylib/examples/textures/textures_image_drawing.c
        vendor/raylib/examples/textures/textures_image_generation.c
        vendor/raylib/examples/textures/textures_image_kernel.c
        vendor/raylib/examples/textures/textures_image_loading.c
        vendor/raylib/examples/textures/textures_image_processing.c
        vendor/raylib/examples/textures/textures_image_rotate.c
        vendor/raylib/examples/textures/textures_image_text.c
        vendor/raylib/examples/textures/textures_logo_raylib.c
        vendor/raylib/examples/textures/textures_mouse_painting.c
        vendor/raylib/examples/textures/textures_npatch_drawing.c
        vendor/raylib/examples/textures/textures_particles_blending.c
        vendor/raylib/examples/textures/textures_polygon_drawing.c
        vendor/raylib/examples/textures/textures_raw_data.c
        vendor/raylib/examples/textures/textures_sprite_animation.c
        vendor/raylib/examples/textures/textures_sprite_button.c
        vendor/raylib/examples/textures/textures_sprite_explosion.c
        vendor/raylib/examples/textures/textures_srcrec_dstrec.c
        vendor/raylib/examples/textures/textures_textured_curve.c
        vendor/raylib/examples/textures/textures_tiled_drawing.c
        vendor/raylib/examples/textures/textures_to_image.c
        vendor/raylib/examples/examples_template.c
        vendor/raylib/projects/4coder/main.c
        vendor/raylib/projects/CMake/core_basic_window.c
        vendor/raylib/projects/CodeBlocks/core_basic_window.c
        vendor/raylib/projects/Geany/core_basic_window.c
        vendor/raylib/projects/Notepad++/raylib_npp_parser/raylib_npp_parser.c
        vendor/raylib/projects/Notepad++/raylib_npp_parser/raylib_to_parse.h
        vendor/raylib/projects/scripts/core_basic_window.c
        vendor/raylib/projects/VS2019-Android/raylib_android/raylib_android.NativeActivity/android_native_app_glue.c
        vendor/raylib/projects/VS2019-Android/raylib_android/raylib_android.NativeActivity/android_native_app_glue.h
        vendor/raylib/projects/VS2019-Android/raylib_android/raylib_android.NativeActivity/main.c
        vendor/raylib/projects/VSCode/main.c
        vendor/raylib/src/external/glfw/deps/glad/gl.h
        vendor/raylib/src/external/glfw/deps/glad/gles2.h
        vendor/raylib/src/external/glfw/deps/glad/vulkan.h
        vendor/raylib/src/external/glfw/deps/mingw/_mingw_dxhelper.h
        vendor/raylib/src/external/glfw/deps/mingw/dinput.h
        vendor/raylib/src/external/glfw/deps/mingw/xinput.h
        vendor/raylib/src/external/glfw/deps/getopt.c
        vendor/raylib/src/external/glfw/deps/getopt.h
        vendor/raylib/src/external/glfw/include/GLFW/glfw3.h
        vendor/raylib/src/external/glfw/include/GLFW/glfw3native.h
        vendor/raylib/src/external/glfw/src/cocoa_init.m
        vendor/raylib/src/external/glfw/src/cocoa_joystick.h
        vendor/raylib/src/external/glfw/src/cocoa_joystick.m
        vendor/raylib/src/external/glfw/src/cocoa_monitor.m
        vendor/raylib/src/external/glfw/src/cocoa_platform.h
        vendor/raylib/src/external/glfw/src/cocoa_time.c
        vendor/raylib/src/external/glfw/src/cocoa_time.h
        vendor/raylib/src/external/glfw/src/cocoa_window.m
        vendor/raylib/src/external/glfw/src/context.c
        vendor/raylib/src/external/glfw/src/egl_context.c
        vendor/raylib/src/external/glfw/src/glx_context.c
        vendor/raylib/src/external/glfw/src/init.c
        vendor/raylib/src/external/glfw/src/input.c
        vendor/raylib/src/external/glfw/src/internal.h
        vendor/raylib/src/external/glfw/src/linux_joystick.c
        vendor/raylib/src/external/glfw/src/linux_joystick.h
        vendor/raylib/src/external/glfw/src/mappings.h
        vendor/raylib/src/external/glfw/src/monitor.c
        vendor/raylib/src/external/glfw/src/nsgl_context.m
        vendor/raylib/src/external/glfw/src/null_init.c
        vendor/raylib/src/external/glfw/src/null_joystick.c
        vendor/raylib/src/external/glfw/src/null_joystick.h
        vendor/raylib/src/external/glfw/src/null_monitor.c
        vendor/raylib/src/external/glfw/src/null_platform.h
        vendor/raylib/src/external/glfw/src/null_window.c
        vendor/raylib/src/external/glfw/src/osmesa_context.c
        vendor/raylib/src/external/glfw/src/platform.c
        vendor/raylib/src/external/glfw/src/platform.h
        vendor/raylib/src/external/glfw/src/posix_module.c
        vendor/raylib/src/external/glfw/src/posix_poll.c
        vendor/raylib/src/external/glfw/src/posix_poll.h
        vendor/raylib/src/external/glfw/src/posix_thread.c
        vendor/raylib/src/external/glfw/src/posix_thread.h
        vendor/raylib/src/external/glfw/src/posix_time.c
        vendor/raylib/src/external/glfw/src/posix_time.h
        vendor/raylib/src/external/glfw/src/vulkan.c
        vendor/raylib/src/external/glfw/src/wgl_context.c
        vendor/raylib/src/external/glfw/src/win32_init.c
        vendor/raylib/src/external/glfw/src/win32_joystick.c
        vendor/raylib/src/external/glfw/src/win32_joystick.h
        vendor/raylib/src/external/glfw/src/win32_module.c
        vendor/raylib/src/external/glfw/src/win32_monitor.c
        vendor/raylib/src/external/glfw/src/win32_platform.h
        vendor/raylib/src/external/glfw/src/win32_thread.c
        vendor/raylib/src/external/glfw/src/win32_thread.h
        vendor/raylib/src/external/glfw/src/win32_time.c
        vendor/raylib/src/external/glfw/src/win32_time.h
        vendor/raylib/src/external/glfw/src/win32_window.c
        vendor/raylib/src/external/glfw/src/window.c
        vendor/raylib/src/external/glfw/src/wl_init.c
        vendor/raylib/src/external/glfw/src/wl_monitor.c
        vendor/raylib/src/external/glfw/src/wl_platform.h
        vendor/raylib/src/external/glfw/src/wl_window.c
        vendor/raylib/src/external/glfw/src/x11_init.c
        vendor/raylib/src/external/glfw/src/x11_monitor.c
        vendor/raylib/src/external/glfw/src/x11_platform.h
        vendor/raylib/src/external/glfw/src/x11_window.c
        vendor/raylib/src/external/glfw/src/xkb_unicode.c
        vendor/raylib/src/external/glfw/src/xkb_unicode.h
        vendor/raylib/src/external/cgltf.h
        vendor/raylib/src/external/dirent.h
        vendor/raylib/src/external/dr_flac.h
        vendor/raylib/src/external/dr_mp3.h
        vendor/raylib/src/external/dr_wav.h
        vendor/raylib/src/external/fix_win32_compatibility.h
        vendor/raylib/src/external/glad.h
        vendor/raylib/src/external/glad_gles2.h
        vendor/raylib/src/external/jar_mod.h
        vendor/raylib/src/external/jar_xm.h
        vendor/raylib/src/external/m3d.h
        vendor/raylib/src/external/miniaudio.h
        vendor/raylib/src/external/msf_gif.h
        vendor/raylib/src/external/par_shapes.h
        vendor/raylib/src/external/qoa.h
        vendor/raylib/src/external/qoaplay.c
        vendor/raylib/src/external/qoi.h
        vendor/raylib/src/external/RGFW.h
        vendor/raylib/src/external/rl_gputex.h
        vendor/raylib/src/external/rlsw.h
        vendor/raylib/src/external/rprand.h
        vendor/raylib/src/external/sdefl.h
        vendor/raylib/src/external/sinfl.h
        vendor/raylib/src/external/stb_image.h
        vendor/raylib/src/external/stb_image_resize2.h
        vendor/raylib/src/external/stb_image_write.h
        vendor/raylib/src/external/stb_perlin.h
        vendor/raylib/src/external/stb_rect_pack.h
        vendor/raylib/src/external/stb_truetype.h
        vendor/raylib/src/external/stb_vorbis.c
        vendor/raylib/src/external/tinyobj_loader_c.h
        vendor/raylib/src/external/vox_loader.h
        vendor/raylib/src/external/win32_clipboard.h
        vendor/raylib/src/platforms/rcore_android.c
        vendor/raylib/src/platforms/rcore_desktop_glfw.c
        vendor/raylib/src/platforms/rcore_desktop_rgfw.c
        vendor/raylib/src/platforms/rcore_desktop_sdl.c
        vendor/raylib/src/platforms/rcore_desktop_win32.c
        vendor/raylib/src/platforms/rcore_drm.c
        vendor/raylib/src/platforms/rcore_template.c
        vendor/raylib/src/platforms/rcore_web.c
        vendor/raylib/src/config.h
        vendor/raylib/src/raudio.c
        vendor/raylib/src/raylib.h
        vendor/raylib/src/raymath.h
        vendor/raylib/src/rcamera.h
        vendor/raylib/src/rcore.c
        vendor/raylib/src/rgestures.h
        vendor/raylib/src/rglfw.c
        vendor/raylib/src/rlgl.h
        vendor/raylib/src/rmodels.c
        vendor/raylib/src/rshapes.c
        vendor/raylib/src/rtext.c
        vendor/raylib/src/rtextures.c
        vendor/raylib/src/utils.c
        vendor/raylib/src/utils.h
        vendor/raylib/tools/rexm/rexm.c
        vendor/raylib/tools/rlparser/rlparser.c
        vendor/raylib-cpp/examples/audio/audio_music_stream.cpp
        vendor/raylib-cpp/examples/audio/audio_sound_loading.cpp
        vendor/raylib-cpp/examples/core/core_basic_window.cpp
        vendor/raylib-cpp/examples/core/core_basic_window_web.cpp
        vendor/raylib-cpp/examples/core/core_drop_files.cpp
        vendor/raylib-cpp/examples/core/core_input_mouse.cpp
        vendor/raylib-cpp/examples/core/core_loading_thread.cpp
        vendor/raylib-cpp/examples/core/core_random_values.cpp
        vendor/raylib-cpp/examples/core/core_window_letterbox.cpp
        vendor/raylib-cpp/examples/core/core_world_screen.cpp
        vendor/raylib-cpp/examples/models/models_billboard.cpp
        vendor/raylib-cpp/examples/models/models_first_person_maze.cpp
        vendor/raylib-cpp/examples/multiple/main.cpp
        vendor/raylib-cpp/examples/multiple/Player.cpp
        vendor/raylib-cpp/examples/multiple/Player.hpp
        vendor/raylib-cpp/examples/shaders/rlights.h
        vendor/raylib-cpp/examples/shaders/shaders_basic_lighting.cpp
        vendor/raylib-cpp/examples/shaders/shaders_basic_pbr.cpp
        vendor/raylib-cpp/examples/shaders/shaders_texture_waves.cpp
        vendor/raylib-cpp/examples/shapes/shapes_collision_area.cpp
        vendor/raylib-cpp/examples/shapes/shapes_logo_raylib.cpp
        vendor/raylib-cpp/examples/text/text_font_filters.cpp
        vendor/raylib-cpp/examples/text/text_font_loading.cpp
        vendor/raylib-cpp/examples/text/text_font_spritefont.cpp
        vendor/raylib-cpp/examples/text/text_raylib_fonts.cpp
        vendor/raylib-cpp/examples/textures/textures_bunnymark.cpp
        vendor/raylib-cpp/examples/textures/textures_image_drawing.cpp
        vendor/raylib-cpp/examples/textures/textures_image_loading.cpp
        vendor/raylib-cpp/include/AudioDevice.hpp
        vendor/raylib-cpp/include/AudioStream.hpp
        vendor/raylib-cpp/include/AutomationEventList.hpp
        vendor/raylib-cpp/include/BoundingBox.hpp
        vendor/raylib-cpp/include/Camera2D.hpp
        vendor/raylib-cpp/include/Camera3D.hpp
        vendor/raylib-cpp/include/Color.hpp
        vendor/raylib-cpp/include/FileData.hpp
        vendor/raylib-cpp/include/FileText.hpp
        vendor/raylib-cpp/include/Font.hpp
        vendor/raylib-cpp/include/Functions.hpp
        vendor/raylib-cpp/include/Gamepad.hpp
        vendor/raylib-cpp/include/Image.hpp
        vendor/raylib-cpp/include/Keyboard.hpp
        vendor/raylib-cpp/include/Material.hpp
        vendor/raylib-cpp/include/Matrix.hpp
        vendor/raylib-cpp/include/Mesh.hpp
        vendor/raylib-cpp/include/MeshUnmanaged.hpp
        vendor/raylib-cpp/include/Model.hpp
        vendor/raylib-cpp/include/ModelAnimation.hpp
        vendor/raylib-cpp/include/Mouse.hpp
        vendor/raylib-cpp/include/Music.hpp
        vendor/raylib-cpp/include/Ray.hpp
        vendor/raylib-cpp/include/RayCollision.hpp
        vendor/raylib-cpp/include/raylib-cpp-utils.hpp
        vendor/raylib-cpp/include/raylib-cpp.hpp
        vendor/raylib-cpp/include/raylib.hpp
        vendor/raylib-cpp/include/RaylibException.hpp
        vendor/raylib-cpp/include/raymath.hpp
        vendor/raylib-cpp/include/Rectangle.hpp
        vendor/raylib-cpp/include/RenderTexture.hpp
        vendor/raylib-cpp/include/Shader.hpp
        vendor/raylib-cpp/include/ShaderUnmanaged.hpp
        vendor/raylib-cpp/include/Sound.hpp
        vendor/raylib-cpp/include/Text.hpp
        vendor/raylib-cpp/include/Texture.hpp
        vendor/raylib-cpp/include/TextureUnmanaged.hpp
        vendor/raylib-cpp/include/Touch.hpp
        vendor/raylib-cpp/include/Vector2.hpp
        vendor/raylib-cpp/include/Vector3.hpp
        vendor/raylib-cpp/include/Vector4.hpp
        vendor/raylib-cpp/include/VrStereoConfig.hpp
        vendor/raylib-cpp/include/Wave.hpp
        vendor/raylib-cpp/include/Window.hpp
        vendor/raylib-cpp/modules/raylib.cppm
        vendor/raylib-cpp/projects/CMake/main.cpp
        vendor/raylib-cpp/projects/VSCode/FirstPerson.cpp
        vendor/raylib-cpp/tests/raylib-assert.h
        vendor/raylib-cpp/tests/raylib_cpp_test.cpp)
